--- a/UIwpf/addDataToPaitStation.xaml
+++ b/UIwpf/addDataToPaitStation.xaml
@@ -9,13 +9,15 @@
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="124,10,0,0" TextWrapping="Wrap" Text="הוספת מידע עבור זוג תחנות עוקבות" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="85,34,0,0" TextWrapping="Wrap" Text=":עליך להכניס את המרחק וזמן הנסיעה בין התחנות" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="284,69,0,0" TextWrapping="Wrap" Text="{Binding Path=StationNum1}" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="118,71,0,0" TextWrapping="Wrap" Text="{Binding Path=StationNum2}" VerticalAlignment="Top"/>
+        <TextBlock  x:Name="numStaion1"  HorizontalAlignment="Left" Margin="91,58,0,0" TextWrapping="Wrap" Text="{Binding Path=StationNum1}" VerticalAlignment="Top"/>
+        <TextBlock  x:Name="numStaion2" HorizontalAlignment="Left" Margin="250,61,0,0" TextWrapping="Wrap" Text="{Binding Path=StationNum2}" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="273,127,0,0" TextWrapping="Wrap" Text=":מרחק" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="91,124,0,0" TextWrapping="Wrap" Text="{Binding Path=Distance,Mode=OneWayToSource}" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="distance"  HorizontalAlignment="Left" Height="23" Margin="91,124,0,0" TextWrapping="Wrap" Text="{Binding Path=Distance,Mode=OneWayToSource}" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="256,152,0,0" TextWrapping="Wrap" Text=":זמן נסיעה" VerticalAlignment="Top" Height="26" Width="54"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="91,155,0,0" TextWrapping="Wrap" Text="{Binding Path=TimeDriving,Mode=OneWayToSource}" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="timeDriving" HorizontalAlignment="Left" Height="23" Margin="91,155,0,0" TextWrapping="Wrap" Text="{Binding Path=TimeDriving,Mode=OneWayToSource}" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" VerticalAlignment="Top" Width="120"/>
         <Button Content="הוסף" HorizontalAlignment="Left" Margin="136,213,0,0" VerticalAlignment="Top" Width="148" Height="31" Click="Button_ClickAddData"/>
+        <TextBlock x:Name="nameStaion1"    HorizontalAlignment="Left" Margin="106,95,0,0" TextWrapping="Wrap" Text="{Binding Path=NameStation1}" VerticalAlignment="Top"/>
+        <TextBlock x:Name="nameStaion2" HorizontalAlignment="Left" Margin="238,93,0,0" TextWrapping="Wrap" Text="{Binding Path=NameStation2}" VerticalAlignment="Top"/>
 
 
     </Grid>
