--- a/UIwpf/addStationToLine.xaml
+++ b/UIwpf/addStationToLine.xaml
@@ -7,14 +7,17 @@
         mc:Ignorable="d"
         Title="addStationToLine" Height="250" Width="450">
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="195,22,0,0" TextWrapping="Wrap" Text=":הוספת תחנה לקו" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="229,22,0,0" TextWrapping="Wrap" Text=":'הוספת תחנה לקו מס" VerticalAlignment="Top"/>
         
-        <TextBlock HorizontalAlignment="Left" Margin="267,64,0,0" TextWrapping="Wrap" Text=":הכנס מספר תחנה" VerticalAlignment="Top" Width="118"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="94,60,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" MaxLength="6" Text="{Binding Path=CodeStation, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
+        <TextBlock HorizontalAlignment="Left" Margin="303,64,0,0" TextWrapping="Wrap" Text=":בחר תחנה" VerticalAlignment="Top" Width="118"/>
+        
         <TextBlock HorizontalAlignment="Left" Margin="275,110,0,0" TextWrapping="Wrap" Text=":הכנס מיקום בקו" VerticalAlignment="Top" Width="98" Height="23"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="96,106,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" Text="{Binding Path=Location, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="98,106,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" Text="{Binding Path=Location, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
         <Button Content="הוסף" HorizontalAlignment="Left" Margin="145,150,0,0" VerticalAlignment="Top" Width="140" Height="38" Click="Button_ClickAdd"/>
-        <TextBlock HorizontalAlignment="Left" Margin="168,22,0,0" TextWrapping="Wrap" Text="{Binding Path=IdentifyNumber}" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="80,20,0,0" TextWrapping="Wrap" Text="{Binding Path=IdentifyNumber}" VerticalAlignment="Top"/>
+        <ComboBox x:Name="stationCB" HorizontalAlignment="Left" Margin="96,58,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="stationCB_SelectionChanged"/>
+        <TextBlock HorizontalAlignment="Left" Margin="203,22,0,0" TextWrapping="Wrap" Text="{Binding Path=LineNumber}" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="120,21,0,0" TextWrapping="Wrap" Text=":מספר מזהה" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
