--- a/UIwpf/addDataToPaitStation.xaml
+++ b/UIwpf/addDataToPaitStation.xaml
@@ -15,7 +15,20 @@
         <TextBox x:Name="distance"  HorizontalAlignment="Left" Height="23" Margin="91,124,0,0" TextWrapping="Wrap" Text="{Binding Path=Distance,Mode=OneWayToSource}" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="256,152,0,0" TextWrapping="Wrap" Text=":זמן נסיעה" VerticalAlignment="Top" Height="26" Width="54"/>
         <TextBox x:Name="timeDriving" HorizontalAlignment="Left" Height="23" Margin="91,155,0,0" TextWrapping="Wrap" Text="{Binding Path=TimeDriving,Mode=OneWayToSource}" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" VerticalAlignment="Top" Width="120"/>
-        <Button Content="הוסף" HorizontalAlignment="Left" Margin="136,213,0,0" VerticalAlignment="Top" Width="148" Height="31" Click="Button_ClickAddData"/>
+        <Button Content="הוסף" HorizontalAlignment="Left" Margin="136,213,0,0" VerticalAlignment="Top" Width="148" Height="31" Click="Button_ClickAddData">
+            <Button.Style>
+                <Style>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=distance, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ElementName=timeDriving, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <TextBlock x:Name="nameStaion1"    HorizontalAlignment="Left" Margin="106,95,0,0" TextWrapping="Wrap" Text="{Binding Path=NameStation1}" VerticalAlignment="Top"/>
         <TextBlock x:Name="nameStaion2" HorizontalAlignment="Left" Margin="238,93,0,0" TextWrapping="Wrap" Text="{Binding Path=NameStation2}" VerticalAlignment="Top"/>
 
