--- a/UIwpf/App.xaml
+++ b/UIwpf/App.xaml
@@ -4,6 +4,21 @@
              xmlns:local="clr-namespace:UIwpf"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="myButtonStyle"            TargetType="Button">
+                <Setter Property="FontFamily"               Value="Ink Free" />
+                <Setter Property="Background"               Value="#FF7DEF74"/>
+                <Setter Property="FontWeight"               Value="Bold" />
+            </Style>
+            <Style x:Key="myTextBlockStyle"            TargetType="TextBlock">
+                <Setter Property="FontSize"               Value="16" />
+                <Setter Property="Foreground"               Value="blue"/>
+                <Setter Property="FontFamily"               Value="Ink Free" />
+                <Setter Property="FontWeight"               Value="Bold" />
+            </Style>
+        <Style x:Key="myLabelStyle"            TargetType="Label">
+            <Setter Property="FontSize"               Value="16" />
+            <Setter Property="FontFamily"               Value="Ink Free" />
+            <Setter Property="FontWeight"               Value="Bold" />
+        </Style>
     </Application.Resources>
 </Application>
