--- a/UIwpf/signUp.xaml
+++ b/UIwpf/signUp.xaml
@@ -14,7 +14,23 @@
         <TextBox x:Name="checkAsk"  Text="{Binding Path=CheckAsk, Mode=OneWayToSource}"  HorizontalAlignment="Left" Height="23" Margin="81,155,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="360,104,0,0" TextWrapping="Wrap" Text=":סיסמה" VerticalAlignment="Top"/>
         <TextBox x:Name="passWord"  Text="{Binding Path=PassWord, Mode=OneWayToSource}" HorizontalAlignment="Left" Height="23" Margin="81,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button Content="הירשם" HorizontalAlignment="Left" Margin="168,206,0,0" VerticalAlignment="Top" Width="98" Height="31" Click="Button_ClickSignUp"/>
+        <Button Content="הירשם" HorizontalAlignment="Left" Margin="168,206,0,0" VerticalAlignment="Top" Width="98" Height="31" Click="Button_ClickSignUp">
+            <Button.Style>
+                <Style>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=userName, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ElementName=checkAsk, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ElementName=passWord, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
 
     </Grid>
 </Window>
