--- a/UIwpf/updateLine.xaml
+++ b/UIwpf/updateLine.xaml
@@ -12,10 +12,23 @@
         <TextBlock HorizontalAlignment="Left" Margin="363,10,0,0" TextWrapping="Wrap" Text=":עדכון קו שמספרו המזהה" VerticalAlignment="Top"/>
         
         <TextBlock HorizontalAlignment="Left" Margin="425,76,0,0" TextWrapping="Wrap" Text=":מספר קו מעודכן" VerticalAlignment="Top" Width="96"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="286,70,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" Text="{Binding Path=LineNumber, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
+        <TextBox  x:Name="lineNumber" HorizontalAlignment="Left" Height="23" Margin="286,70,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" Text="{Binding Path=LineNumber, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="443,116,0,0" TextWrapping="Wrap" Text=":איזור מעודכן" VerticalAlignment="Top" Width="73" Height="17"/>
-        
-        <Button Content="עדכן" HorizontalAlignment="Left" Margin="337,152,0,0" VerticalAlignment="Top" Width="75" Click="Button_ClickUpdate"/>
+
+        <Button Content="עדכן" HorizontalAlignment="Left" Margin="337,152,0,0" VerticalAlignment="Top" Width="75" Click="Button_ClickUpdate">
+            <Button.Style>
+                <Style>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=lineNumber, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ElementName=areaCB, Path=SelectedIndex}" Value="-1">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <TextBlock HorizontalAlignment="Left" Margin="311,11,0,0" TextWrapping="Wrap" Text="{Binding Path=IdentifyNumber}" VerticalAlignment="Top"/>
         <ComboBox x:Name="areaCB" HorizontalAlignment="Left" Margin="283,111,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="areaCB_SelectionChanged"/>
 
