--- a/UIwpf/updateStation.xaml
+++ b/UIwpf/updateStation.xaml
@@ -14,11 +14,27 @@
         <TextBlock HorizontalAlignment="Left" Margin="399,144,0,0" TextWrapping="Wrap" Text=":קו אורך מעודכן" VerticalAlignment="Top" Height="29" Width="129"/>
         <TextBlock HorizontalAlignment="Left" Margin="390,198,0,0" TextWrapping="Wrap" Text=":שם תחנה מעודכן" VerticalAlignment="Top" Height="29" Width="129"/>
 
-        <TextBox x:Name="addLine2" HorizontalAlignment="Left" Height="23" Margin="203,86,0,0" TextWrapping="Wrap" Text="{Binding Path=Latitude, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="addLine3" HorizontalAlignment="Left" Height="23" Margin="203,142,0,0" TextWrapping="Wrap" Text="{Binding Path=Longitude, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="addLine4" HorizontalAlignment="Left" Height="23" Margin="202,198,0,0" TextWrapping="Wrap" Text="{Binding Path=NameStation, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="latitude" HorizontalAlignment="Left" Height="23" Margin="203,86,0,0" TextWrapping="Wrap" Text="{Binding Path=Latitude, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="longitude" HorizontalAlignment="Left" Height="23" Margin="203,142,0,0" TextWrapping="Wrap" Text="{Binding Path=Longitude, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="nameStation" HorizontalAlignment="Left" Height="23" Margin="202,198,0,0" TextWrapping="Wrap" Text="{Binding Path=NameStation, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
         <CheckBox Content="קיימת גישה לנכים" IsChecked="{Binding Path=IsAccessible, Mode=OneWayToSource}"  HorizontalAlignment="Left" Margin="278,247,0,0" VerticalAlignment="Top"/>
-        <Button Content="עדכן" HorizontalAlignment="Left" Margin="301,284,0,0" VerticalAlignment="Top" Width="75" Click="Button_ClickUpdateStation"/>
+        <Button Content="עדכן" HorizontalAlignment="Left" Margin="301,284,0,0" VerticalAlignment="Top" Width="75" Click="Button_ClickUpdateStation">
+            <Button.Style>
+                <Style>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=latitude, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ElementName=longitude, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ElementName=nameStation, Path=Text}" Value="">
+                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
         <TextBlock HorizontalAlignment="Left" Margin="251,0,0,396.667" TextWrapping="Wrap" Text="{Binding Path=CodeStation}" VerticalAlignment="Bottom"/>
 
     </Grid>
