--- a/UIwpf/showStation.xaml
+++ b/UIwpf/showStation.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="showStation" Height="450" Width="700">
+        Title="showStation" Height="700" Width="700">
     <Window.Resources>
         <DataTemplate x:Key="MyDataTemplateLinesInStations"                   DataType="local:MyData" >
             <Grid>
@@ -34,5 +34,7 @@
         <TextBlock HorizontalAlignment="Left" Margin="494,104,0,0" TextWrapping="Wrap" Text="{Binding Longitude}" VerticalAlignment="Top" Height="19" Width="70"/>
         <TextBlock HorizontalAlignment="Left" Margin="579,190,0,0" TextWrapping="Wrap" Text=":נגישות לנכים" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="497,192,0,0" TextWrapping="Wrap" Text="{Binding IsAccessible}" VerticalAlignment="Top"/>
+        <DataGrid x:Name="dgForStation"  HorizontalAlignment="Left" Height="191" Margin="153,396,0,0" VerticalAlignment="Top" Width="373"/>
+        <TextBlock x:Name="timerTextBlock" HorizontalAlignment="Left" Margin="232,307,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="58" Width="208"/>
     </Grid>
 </Window>
